test/arrays/ferguson/array-of-owned-error2.good
array-of-owned-error2.chpl:3: In function 'main':
array-of-owned-error2.chpl:6: error: invalid implicit copy-initialization
array-of-owned-error2.chpl:5: note: type [domain(1,int(64),false)] owned C does not have a valid init=
